<resources>
    <string name="app_name">Challenge Chapter 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_punya_akun"><u>Belum punya akun?</u></string>
    <string name="register">Register</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="welcome">Welcome</string>
    <string name="logout"><u>Logout</u></string>
    <string name="home">Home</string>
    <string name="input_data">Input Data Barang</string>
    <string name="masukkan_judul">Masukkan Judul</string>
    <string name="masukkan_catatan">Masukkan Catatan</string>
    <string name="save">Save</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="apakah_anda_yakin_ingin_menghapus_catatan">Apakah anda yakin ingin menghapus catatan?</string>
    <string name="hapus">Hapus</string>
    <string name="cancel">Cancel</string>
</resources>